added 'application_name=...' (db_con) to example of config

--- a/EXAMPLE.pg-perfect-ticker.cfg
+++ b/EXAMPLE.pg-perfect-ticker.cfg
@@ -7,7 +7,7 @@ task_list=example_task_a example_task_b example_task_c
 example_thr_pool_d.max_workers=1
 example_thr_pool_e.max_workers=5
 
-example_db_con.dsn=dbname=test user=postgres password=secret
+example_db_con.dsn=application_name=pg-perfect-ticker dbname=test user=postgres password=secret
 
 example_task_a.sql=SELECT 123
 example_task_a.timer=15.5
