using commented code in condig example

--- a/EXAMPLE.pg-perfect-ticker.cfg
+++ b/EXAMPLE.pg-perfect-ticker.cfg
@@ -19,7 +19,7 @@ example_task_b.timer = 30.7
 example_task_b.thread_pool = example_thr_pool_e
 example_task_b.db_con = example_db_con
 
-example_task_c.disabled = yes
+#example_task_c.disabled = yes
 example_task_c.sql = SELECT 'this task is disabled'
 example_task_c.timer = 45
 example_task_c.thread_pool = example_thr_pool_e
