added ``log_sql`` feature

--- a/EXAMPLE.pg-perfect-ticker.cfg
+++ b/EXAMPLE.pg-perfect-ticker.cfg
@@ -8,6 +8,7 @@ example_thr_pool_d.max_workers = 1
 example_thr_pool_e.max_workers = 5
 
 example_db_con.dsn = application_name=pg-perfect-ticker dbname=test user=postgres password=secret
+#example_db_con.log_sql = SELECT my_schema.my_log_func(%(log_data)s::json)
 
 example_task_a.sql = SELECT 123
 example_task_a.timer = 15.5
