--- a/EXAMPLE.pg-perfect-ticker.cfg
+++ b/EXAMPLE.pg-perfect-ticker.cfg
@@ -15,7 +15,7 @@ example_task_a.timer = 15.5
 example_task_a.thread_pool = example_thr_pool_d
 example_task_a.db_con = example_db_con
 
-example_task_b.script = EXAMPLE.script_task_b
+example_task_b.script = EXAMPLE.b_task_script.py
 example_task_b.timer = 30.7
 example_task_b.thread_pool = example_thr_pool_e
 example_task_b.db_con = example_db_con
