--- a/EXAMPLE.pg-perfect-ticker.cfg
+++ b/EXAMPLE.pg-perfect-ticker.cfg
@@ -1,16 +1,22 @@
 [pg-perfect-ticker]
 
-thread_pool_list = example_thr_pool_d example_thr_pool_e
-db_con_list = example_db_con
-task_list = example_task_a example_task_b example_task_c
+thread_pool_list =
+    example_thr_pool_d
+    example_thr_pool_e
+db_con_list =
+    example_db_con
+task_list =
+    example_task_a
+    example_task_b
+    example_task_c
 
 example_thr_pool_d.max_workers = 1
 example_thr_pool_e.max_workers = 5
 
 example_db_con.dsn = application_name=pg-perfect-ticker dbname=test user=postgres password=secret
-#example_db_con.log_sql = SELECT my_schema.my_log_func(%(log_data)s::json)
+#example_db_con.log_sql = select my_schema.my_log_func(%(log_data)s::json)
 
-example_task_a.sql = SELECT 123
+example_task_a.sql = select 123
 example_task_a.timer = 15.5
 example_task_a.thread_pool = example_thr_pool_d
 example_task_a.db_con = example_db_con
@@ -21,7 +27,7 @@ example_task_b.thread_pool = example_thr_pool_e
 example_task_b.db_con = example_db_con
 
 #example_task_c.disabled = yes
-example_task_c.sql = SELECT 'this task is disabled'
+example_task_c.sql = select 'this task is disabled'
 example_task_c.timer = 45
 example_task_c.thread_pool = example_thr_pool_e
 example_task_c.db_con = example_db_con
