``script_arg`` feature

--- a/EXAMPLE.pg-perfect-ticker.cfg
+++ b/EXAMPLE.pg-perfect-ticker.cfg
@@ -22,11 +22,14 @@ example_task_a.thread_pool = example_thr_pool_d
 example_task_a.db_con = example_db_con
 
 example_task_b.script = EXAMPLE.b_task_script.py
+example_task_b.script_arg =
+    111.11
+    'the second arg is with spaces'
 example_task_b.timer = 30.7
 example_task_b.thread_pool = example_thr_pool_e
 example_task_b.db_con = example_db_con
 
-#example_task_c.disabled = yes
+example_task_c.disabled = yes
 example_task_c.sql = select 'this task is disabled'
 example_task_c.timer = 45
 example_task_c.thread_pool = example_thr_pool_e
