--- a/EXAMPLE.pg-perfect-ticker.cfg
+++ b/EXAMPLE.pg-perfect-ticker.cfg
@@ -1,3 +1,9 @@
+[common]
+
+some_common_args =
+    567.8
+    'the last arg is with spaces'
+
 [pg-perfect-ticker]
 
 thread_pool_list =
@@ -25,6 +31,7 @@ example_task_b.script = EXAMPLE.b_task_script.py
 example_task_b.script_arg =
     111.11
     'the second arg is with spaces'
+    ${common:some_common_args}
 example_task_b.timer = 30.7
 example_task_b.thread_pool = example_thr_pool_e
 example_task_b.db_con = example_db_con
