--- a/EXAMPLE.pg-perfect-ticker.service
+++ b/EXAMPLE.pg-perfect-ticker.service
@@ -1,11 +1,11 @@
 [Unit]
 Description=pg-perfect-ticker daemon
-After=postgresql
+After=network.target postgresql.service
 
 [Service]
 Type=notify
-ExecStart=/path/to/utility/pg-perfect-ticker --log-config=/path/to/logging.json /path/to/config/pg-perfect-ticker.cfg
-Restart=always
+ExecStart=/usr/bin/python -u -- /path/to/utility/pg-perfect-ticker --log-config=/path/to/logging.json -- /path/to/config/pg-perfect-ticker.cfg
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
