--- a/EXAMPLE.pg-perfect-ticker.service
+++ b/EXAMPLE.pg-perfect-ticker.service
@@ -4,6 +4,7 @@ After=network.target postgresql.service
 
 [Service]
 Type=notify
+Environment=PYTHONPATH=/path/to/python-lib
 ExecStart=/usr/bin/python -u -- /path/to/utility/pg-perfect-ticker --log-config=/path/to/logging.json -- /path/to/config/pg-perfect-ticker.cfg
 Restart=on-failure
 
