added ``stmt_timeout`` param for task

--- a/EXAMPLE.pg-perfect-ticker.cfg
+++ b/EXAMPLE.pg-perfect-ticker.cfg
@@ -15,6 +15,7 @@ task_list =
     example_task_a
     example_task_b
     example_task_c
+    example_task_d
 
 example_thr_pool_d.max_workers = 1
 example_thr_pool_e.max_workers = 5
@@ -41,3 +42,9 @@ example_task_c.sql = select 'this task is disabled'
 example_task_c.timer = 45
 example_task_c.thread_pool = example_thr_pool_e
 example_task_c.db_con = example_db_con
+
+example_task_d.sql = select pg_sleep (10.0 * random ())
+example_task_d.stmt_timeout = 5.5
+example_task_d.timer = 30.0
+example_task_d.thread_pool = example_thr_pool_e
+example_task_d.db_con = example_db_con
