added ``log_dsn`` param: it's for detached database for logs only

--- a/EXAMPLE.pg-perfect-ticker.cfg
+++ b/EXAMPLE.pg-perfect-ticker.cfg
@@ -21,7 +21,9 @@ example_thr_pool_d.max_workers = 1
 example_thr_pool_e.max_workers = 5
 
 example_db_con.dsn = application_name=pg-perfect-ticker dbname=test user=postgres password=secret
-#example_db_con.log_sql = select my_schema.my_log_func(%(log_data)s::json)
+#example_db_con.log_dsn = application_name=pg-perfect-ticker dbname=test_log user=postgres password=secret
+# if ``CON.log_dsn`` if omitted, there will be used ``CON.dsn`` for executing ``CON.log_sql``
+#example_db_con.log_sql = select my_schema.my_log_func (%(log_data)s::json)
 
 example_task_a.sql = select 123
 example_task_a.timer = 15.5
